# voice_emotion_recognition

./: .gitignore  docker-compose.yml
src/backend/: Dockerfile  pyproject.toml
src/backend/apps/: app.py  celery_app.py  celery_config.py
src/backend/templates/: submit_url.html  view.html
src/worker/: Dockerfile  Dockerfile.cpu  pyproject.toml
src/worker/apps/: __init__.py  celery_app.py  monkeypatch.py  tasks.py
